--- a/mako_templates/user.html
+++ b/mako_templates/user.html
@@ -14,7 +14,7 @@
         <form style="display: inline;" action="/users/update-language" method="post">
             <select name="language">
                 %for (value, label) in user_language_options.iteritems():
-                    <option value="${value}"${user_language == value and 'selected="selected"' or ''}>${label}</option>
+                    <option value="${value}"${user_language == value and 'selected="selected"' or ''}>${label | h}</option>
                 %endfor
             </select>
             <input type="submit" value="change"/>
