--- a/mako_templates/header.html
+++ b/mako_templates/header.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>${CONFIG['meta']['site_name']} - ${rendering['title'] | h}</title>
-        <meta name="description" content="${site['site_name']} is a crowd-sourced database of market board information for Final Fantasy XIV" />
+        <meta name="description" content="${CONFIG['meta']['site_name']} is a crowd-sourced database of market board information for Final Fantasy XIV" />
         <meta name="keywords" content="FFXIV, Final Fantasy XIV, Heavensward, Realm Reborn, Marketboard, Market" />
         <meta name="author" content="Neil Tallim" />
 
