--- a/mako_templates/header.html
+++ b/mako_templates/header.html
@@ -32,7 +32,7 @@
         <!-- Navigation -->
 
          <nav class="navbar navbar-default" role="navigation">
-             <a class="navbar-brand" href="#">${CONFIG['meta']['site_name']}</a>
+             <a class="navbar-brand" href="/">${CONFIG['meta']['site_name']}</a>
              <ul class="nav navbar-nav">
                  <li class="nav-item active">
                      %if role['active']:
